# qweb

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Jenkinsfile  MANIFEST.in  QWeb.html  README.md  RELEASE.md  RELEASE.md_template  debug.txt  duties.py  index.html  install.sh  mkdocs.yml  pylintrc  pyproject.toml  qweb_mac_m1_installation.html  remake_pyconly_wheel.py  requirements.txt  requirements_test.txt  ruff.toml  setup.cfg  setup.py  tox.ini  versioneer.py
.github/workflows/: acceptance.yml  deploy_mkdocs.yml  linux_acceptance.yml  linux_build.yml  mac_acceptance.yml  quality_assurance.yml  static_analysis.yml  tests_reusable.yml  win_acceptance.yml
QWeb/: __init__.py  __main__.py  _version.py  config.py  custom_config.py
QWeb/internal/: __init__.py  actions.py  ajax.py  alert.py  bidi.py  blocks.py  checkbox.py  config.py  config_defaults.py  cookies.py  decorators.py  download.py  dragdrop.py  dropdown.py  element.py  exceptions.py  file.py  frame.py  frame_checker.py  icon.py  input_.py  input_handler.py  javascript.py  lists.py  meas.py  platform.py  screenshot.py  search_strategy.py  secrets.py  table.py  text.py  user.py  util.py  window.py  xhr.py
QWeb/keywords/: __init__.py  ajax.py  alert.py  bidi.py  blocks.py  browser.py  checkbox.py  config.py  cookies.py  debug.py  download.py  dragdrop.py  dropdown.py  element.py  file.py  frame.py  icon.py  input_.py  javascript.py  lists.py  mouse.py  screenshot.py  search_strategy.py  table.py  text.py  window.py
QWeb/styles/: qentinel.style
concepts/: anchors.html  assertions.html  frames.html  locators.html  shadow_dom.html  waits.html
docs/: QWeb.html  index.md  qweb_mac_m1_installation.md
docs/concepts/: anchors.md  assertions.md  frames.md  locators.md  shadow_dom.md  waits.md
docs/getting_started/: basics.md  installation.md
docs/how_to/: attribute_access.md  browser.md  checkboxes.md  debugging.md  devconsole.md  dropdowns.md  extending.md  input.md  python.md  tables.md  upload_download.md
docs/reference/: configuration.md  keywords.md
docs/stylesheets/: extra.css
example/CustomerLibrary/: CustomerLib.py  decorators.py
example/example-project-qweb/: .gitignore  README.md
getting_started/: basics.html  installation.html
how_to/: attribute_access.html  browser.html  checkboxes.html  debugging.html  devconsole.html  dropdowns.html  extending.html  input.html  python.html  tables.html  upload_download.html
reference/: configuration.html  keywords.html
search/: search_index.json
test/: .pabotsuitenames
test/acceptance/: .pabot_all  .pabot_headless  .pabot_order  .pabot_suite_order  .pabot_windowed  ClickItem.robot  __init__.robot  accordion.robot  alert.robot  browser.robot  browser_headless.robot  checkbox.robot  cli.robot  config.robot  cookies.robot  download.robot  dragdrop.robot  dropdown.robot  element.robot  element_corners.robot  file.robot  firefox.robot  frame.robot  icon.robot  input.robot  javascript.robot  lists.robot  no_body.robot  pabot_suite_ordering.py  paceblock.robot  requests.robot  safari_smoke.robot  screenshot.robot  searchingorder.robot  searchorder_config.robot  selectors.robot  self_repairing_input.robot  shadow_dom.robot  swipe.robot  table.robot  (+10 more)
test/files/: test3.txt  test4.txt  test5.txt  test6.txt  test7.txt
test/resources/: accordions_and_modals.html  alert.html  checkbox.html  corners.html  devconsole.html  drag.html  dropdown.css  dropdown.html  frame.html  frame_inner.html  input.html  items.html  javascript.html  lists.html  mouse.html  multielement_text.html  newtablink.html  no_body.html  no_body_f1.html  no_body_f2.html  no_body_popup.html  num_anchor.html  self_repairing_example.html  (+12 more)
venv-fork-qweb/: pyvenv.cfg
(+108 files in other folders)
