[flake8]
ignore = 
    # E501 too long lines
    E501,
    # E126 continuation line over-indented for hanging indent
    E126

[isort]
known_third_party=mock, pytest, robot, selenium
line_length=100
skip = versioneer.py, QWeb/_version.py

[metadata]
license_file = LICENSE

[pydocstyle]
ignore =
    D100, # allow empty module doctrings
    D213, # force multiline docstrings to start immediately after """
    D413

[versioneer]
VCS = git
style = pep440
tag_prefix=
versionfile_source = QWeb/_version.py
versionfile_build = QWeb/_version.py

