[flake8]
ignore = 
    # E501 too long lines
    E501,
    # E126 continuation line over-indented for hanging indent
    E126,
    # W503 line break before binary operator
    W503

[isort]
known_third_party=mock, pytest, robot, selenium
line_length=100
skip = versioneer.py, QWeb/_version.py

[yapf]
column_limit=100

[metadata]
license_file = LICENSE

[pydocstyle]
ignore =
    D100, # allow empty module doctrings
    D213, # force multiline docstrings to start immediately after """
    D413

[versioneer]
VCS = git
style = pep440-pre
tag_prefix=
versionfile_source = QWeb/_version.py
versionfile_build = QWeb/_version.py

[mypy]
warn_return_any = False
warn_unused_configs = True

[mypy-selenium.*]
ignore_missing_imports = True

[mypy-robot.*]
ignore_missing_imports = True

[mypy-pyautogui.*]
ignore_missing_imports = True

[mypy-cv2.*]
ignore_missing_imports = True

[mypy-pyperclip.*]
ignore_missing_imports = True

[mypy-pynput.keyboard.*]
ignore_missing_imports = True

[mypy-slate3k.*]
ignore_missing_imports = True

[mypy-pdfminer.pdfparser.*]
ignore_missing_imports = True

[mypy-DebugLibrary.*]
ignore_missing_imports = True

[mypy-PIL.*]
ignore_missing_imports = True

[mypy-skimage.metrics.*]
ignore_missing_imports = True